Add consultation show page

--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow overflow-hidden  sm:rounded-lg max-w-3xl mx-auto">
+<div class="bg-white shadow overflow-hidiven  sm:rounded-lg max-w-3xl mx-auto">
   <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
     <div class="w-full">
       <div class="flex md:flex-row flex-col justify-between">
@@ -28,103 +28,157 @@
         <span class="font-bold"><%= @consultation.source %></span> <%= time_ago_in_words(@consultation.created_at) %>
         ago
       </p>
+      <% if @consultation.doctor_id.present? %>
+        <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
+          Assigned to
+          <span class="font-bold"><%= @consultation.doctor.name %></span>
+        </p>
+      <% end %>
     </div>
   </div>
-
-  <!--   :, :other_details,-->
-  <!--  :current_status, :category, :antenatal, :quarantined, :quarantined_on, :endemic,-->
-  <!--  :family_members_count, :elderly, :comorbidities, :prescription_given, :notes, :tested, :sample_taken_on,-->
-  <!--  :action_id, :shift_from, :shift_to, :reason, :status, :surveillance, :contact_id, :doctor_id-->
   <div class="px-4 py-5 sm:p-0">
-    <dl>
-      <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Reason for Calling
-        </dt>
-        <dd class="mt-1 text-sm flex flex-col leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <p>
-            <%= @consultation.reason_for_calling %>
-          </p>
-        </dd>
+
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Reason for Calling
       </div>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          WhatsApp Number, Click to Call
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <%= link_to @contact.phone, "tel:#{@contact.phone}" %>
-        </dd>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <p>
+          <%= @consultation.reason_for_calling %>
+        </p>
       </div>
-      <% if @contact.alternate_contact.present? %>
-        <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-          <dt class="text-sm leading-5 font-medium text-gray-500">
-            Alternate Contact Number
-          </dt>
-          <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-            <%= @contact.alternate_contact %>
-          </dd>
+    </div>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Symptoms
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <% @consultation.symptoms.map do |s| %>
+            <span class="py-1 px-2 mr-2 bg-yellow-100 rounded">
+            <%= s.name %>
+            </span>
+        <% end %>
+      </div>
+    </div>
+    <% if @consultation.other_details %>
+      <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+        <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+          Other Symptoms
         </div>
-      <% end %>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Last Called
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <% if @last_call %>
-            Called <span class="font-bold"><%= time_ago_in_words(@last_call.created_at) %></span> ago,
-            by <%= @last_call.user.email %>
-          <% else %>
-            Not called yet
-          <% end %>
+        <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+          <%= @consultation.other_details %>
+        </div>
+      </div>
+    <% end %>
 
-        </dd>
-      </div>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Date of Birth
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <% if @contact.dob.present? %>
-            <%= @contact.dob.to_s(:long) %>
-          <% end %>
-        </dd>
-      </div>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Age / Gender
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <%= @contact.gender.to_s.capitalize() %>, <%= @contact.age %> years old
-        </dd>
-      </div>
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Address
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <ul>
-            <li class="my-2"><span class="font-bold">House:</span> <span><%= @contact.house_name %></span></li>
-            <li class="my-2"><span class="font-bold">Ward: </span><%= @contact.ward %></span></li>
-            <li class="my-2"><span class="font-bold">Panchayat: </span><%= @contact.panchayat.name %></span></li>
-            <li class="my-2"><span class="font-bold">Landmark: </span><%= @contact.landmark %></span></li>
-          </ul>
-        </dd>
-      </div>
 
-      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Health Care Worker Details
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-          <ul>
-            <li class="my-2"><span class="font-bold">PHC:</span> <span><%= @contact.phc %></span></li>
-            <li class="my-2"><span class="font-bold">Name of health worker: </span><%= @contact.health_worker %></span>
-            </li>
-            <li class="my-2">
-              <span class="font-bold">Mobile health worker: </span><%= @contact.number_health_worker %></span></li>
-          </ul>
-        </dd>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Current Condition
       </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <ul>
+          <li class="my-2"><span class="font-bold">Status:</span> <span><%= @consultation.current_status %></span></li>
+          <li class="my-2"><span class="font-bold">Category: </span><span><%= @consultation.category %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Antenatal: </span><span><%= @consultation.antenatal ? "Yes" : "No" %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Endemic: </span><span><%= @consultation.endemic ? "Yes" : "No" %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Quarantined: </span><span><%= @consultation.quarantined_on.blank? ? "No" : "Yes #{time_ago_in_words(@consultation.quarantined_on)}" %></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Family Details
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <ul>
+          <li class="my-2"><span class="font-bold">Total Family Members:</span>
+            <span><%= @consultation.family_members_count %></span></li>
+          <li class="my-2"><span class="font-bold">Elderly: </span><span><%= @consultation.elderly %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Antenatal: </span><span><%= @consultation.antenatal ? "Yes" : "No" %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Endemic: </span><span><%= @consultation.endemic ? "Yes" : "No" %></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Quarantined
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <p>
+          <%= @consultation.quarantined_on.blank? ? "No" : "Yes #{time_ago_in_words(@consultation.quarantined_on)}" %>
+        </p>
+      </div>
+    </div>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Prescription Given
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <p>
+          <%= @consultation.prescription_given ? "Yes" : "NO" %>
+        </p>
+      </div>
+    </div>
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Sample Details
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <ul>
+          <li class="my-2"><span class="font-bold">Test status:</span>
+            <span><%= @consultation.test_status %></span></li>
+          <li class="my-2">
+            <span class="font-bold">sample taken on: </span><span><%= @consultation.sample_taken_on %></span></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Shifted
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <ul>
+          <li class="my-2"><span class="font-bold">Shifted From:</span><span><%= @consultation.shift_from %></span></li>
+          <li class="my-2"><span class="font-bold">Shifted to </span><span><%= @consultation.shift_to %></span></li>
+          <li class="my-2">
+            <span class="font-bold">Reason: </span><span><%= @consultation.reason %></span></li>
+<!--          <li class="my-2">-->
+<!--            <span class="font-bold">Transaction Medium: </span><span><%#= @consultation.transaction %></span></li>-->
+        </ul>
+      </div>
+    </div>
+
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Surveillance
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <p>
+          <%= @consultation.surveillance %>
+        </p>
+      </div>
+    </div>
+
+    <div class="flex md:flex-row flex-col sm:px-6 sm:py-5">
+      <div class="w-full md:w-1/3 text-sm leading-5 font-medium text-gray-500">
+        Notes
+      </div>
+      <div class="w-full md:w-2/3 mt-1 text-sm leading-5 text-gray-900 sm:mt-0">
+        <p>
+          <%= @consultation.notes %>
+        </p>
+      </div>
+    </div>
+
   </div>
 </div>
 
+<!--  :action_id, :shift_from, :shift_to, :reason,
