--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -255,7 +255,7 @@
             </dd>
           </div>
           <div>
-            <%= link_to 'View Details', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
+            <%= link_to 'View Details', contact_consultation_path(@contact, consultation), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
           </div>
         <% end %>
       </div>
