--- a/app/views/consultations/_status_form.html.erb
+++ b/app/views/consultations/_status_form.html.erb
@@ -1,6 +1,6 @@
 <div>
 
-  <%= simple_form_for [@contact, consultation], defaults: { input_html: { class: 'form-input mt-1' }, wrapper_html: { class: 'flex flex-col my-2' } } do |f| %>
+  <%= simple_form_for consultation, defaults: { input_html: { class: 'form-input mt-1' }, wrapper_html: { class: 'flex flex-col my-2' } } do |f| %>
     <%= f.input :status, input_html: { class: 'form-select' }, required: true, label: 'Status' %>
     <div class="mt-4">
       <%= f.button :submit, 'Update Status', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
