--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -4,8 +4,8 @@
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
     <%= f.input :name, required: true, label: 'Enter Patient Name' %>
-    <%= f.input :dob, label: 'Date of Arrival / Contact', as: :date, input_html: { class: 'form-select p-2 border' }, as: :date, start_year: Date.today.year - 90, end_year: Date.today.year, required: true %>
-    <%= f.input :age, required: true %>
+
+    <%= f.input :dob, label: 'Date of Birth', as: :date, class: 'flex', input_html: { class: 'form-select p-2 border' }, as: :date, start_year: Date.today.year - 90, end_year: Date.today.year, required: true %>
     <%= f.input :phone, required: true, label: 'Enter the Whatsapp number of the patient' %>
     <%= f.input :alternate_contact, label: 'Alternate contact number of the patient' %>
     <%= f.input :gender, input_html: { class: 'form-select' }, required: true %>
