--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,3 +1,10 @@
-<h1>Editing Contact</h1>
-
-<%= render 'form', contact: @contact %>
+<div class="bg-white shadow overflow-hidiven  sm:rounded-lg max-w-3xl mx-auto">
+  <div class="px-6 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
+    <div class="mt-4 text-3xl font-semibold">
+      Editing Contact
+    </div>
+  </div>
+  <div class="px-6 py-4 mx-auto">
+    <%= render 'form', contact: @contact %>
+  </div>
+</div>
