--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,6 @@
 
 <% content_for(:head) do %>
   <title><%= presenter.page_title %></title>
-  <%= stylesheet_pack_tag 'ConvertMarkdownPack', media: 'all' %>
 <% end %>
 
 <% if current_user.is_admin? %>
@@ -103,19 +102,6 @@
   </section>
 <% end %>
 
-<hr class="block my-8"/>
-
-<div class="mt-4 flex items-center justify-between">
-  <% if current_user.panchayat_admin? %>
-    <h1 class="text-xl font-bold">Requests for <%= current_user.panchayat.name %></h1>
-  <% else %>
-    <h1 class="text-xl font-bold">Requests</h1>
-    <span class="inline-flex rounded-md shadow-sm">
-        <%= link_to '+ New Contact', new_contact_path, class: 'inline-flex items-center px-3 py-2 border border-gray-300 text-sm leading-4 font-medium rounded-md text-gray-100 bg-gray-900 hover:text-gray-200 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-100 active:bg-gray-700 transition ease-in-out duration-150' %>
-    </span>
-  <% end %>
-</div>
-
 <% if current_user.panchayat_admin? or current_user.phone_caller? %>
   <div class="mt-4 flex flex-col">
     <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
@@ -148,7 +134,7 @@
           <% Consultation.all.order(:created_at).reverse.each do |c| %>
             <tr class="hover:text-gray-100 cursor-pointer">
               <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 font-medium text-gray-900">
-                <%= link_to "EKM#{c.contact.id}", contact_consultation_path(c.contact, c) %>
+                <%= link_to "EKM#{c.contact.id}", consultation_path(c) %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 text-gray-500">
                 <%= c.contact.name %>
@@ -160,7 +146,9 @@
                 <%= time_ago_in_words(c.created_at) %> ago
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 text-gray-500">
-                #
+                <div class="<%= "bg-#{c.action&.color}-200 inline-flex mx-auto px-1 rounded font-semibold" %>">
+                  <%= c.action&.name %>
+                </div>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 text-gray-500">
                 <%= c.status %>
