--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -11,7 +11,6 @@
     <% if not current_user.panchayat_admin? %>
       <div class="mt-3 lg:mt-0">
         <%= link_to 'Edit Contact', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
-        <%= link_to 'Finish Call', make_call_contact_path(@contact, user_id: current_user.id), class: 'lg:ml-1 inline-flex items-center px-3 py-2 text-sm rounded-md font-medium leading-5 bg-green-100 text-green-800' %>
       </div>
     <% end %>
   </div>
@@ -255,7 +254,7 @@
             </dd>
           </div>
           <div>
-            <%= link_to 'View Details', contact_consultation_path(@contact, consultation), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
+            <%#= link_to 'View Details', contact_consultation_path(@contact, consultation), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
           </div>
         <% end %>
       </div>
