--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,61 +2,75 @@
 <html>
 
 <head>
-    <title>Corona Cell</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+  <title>Telemedicine | CoronaSafe </title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body class="bg-gray-100 leading-normal tracking-normal font-sans text-gray-900">
-    <header class="px-8 lg:px-16 py-4 flex flex-col items-start lg:flex-row justify-between lg:items-center w-full shadow-md bg-white">
-        <%= link_to root_path do %>
-        <h4 class="font-bold">Corona Cell</h4>
-        <% end %>
+<% if @skip_header == true %>
+  <%= yield %>
+<% else %>
+  <header class="shadow-md bg-white">
+    <div class="max-w-7xl mx-auto px-8 lg:px-16 py-4 flex flex-col items-start lg:flex-row justify-between lg:items-center w-full ">
+      <%= link_to root_path do %>
+        <h4 class="font-bold">Telemedicine | CoronaSafe</h4>
+      <% end %>
 
-        <div class="flex flex-col items-start lg:items-center lg:flex-row">
-            <% if user_signed_in? and (not current_user.panchayat_admin?) %>
-            <div class="mt-3 lg:mt-0">
-                <%= simple_form_for :search, url: find_phone_path, method: "GET" do |f| %>
-                <div class="flex">
-                    <%= f.input :phone_number, autofocus: true, label: false, placeholder: 'Enter Phone Number', input_html: {class: 'form-input py-2 text-sm'} %>
-                    <%= f.submit "Find Phone", class: '-ml-2 inline-flex items-center px-3 py-1 border border-gray-300 text-sm leading-5 font-medium rounded-r-md text-gray-700 bg-gray-100 hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150' %>
-                </div>
-                <% end %>
-            </div>
+      <div class="flex flex-col items-start lg:items-center lg:flex-row">
+        <% if user_signed_in? and (not current_user.panchayat_admin?) %>
+          <div class="mt-3 lg:mt-0">
+            <%= simple_form_for :search, url: find_phone_path, method: "GET" do |f| %>
+              <div class="flex md:flex-row flex-col">
+                <%= f.input :phone_number, autofocus: true, label: false, placeholder: 'Enter Phone Number', input_html: { class: 'form-input py-2 text-sm' } %>
+                <%= f.submit "Find or Create Patient", class: 'mx-auto md:-ml-2 mt-2 md:mt-0 inline-flex text-center items-center px-3 py-1 border border-gray-300 text-sm leading-5 font-medium md:rounded-r-md text-gray-700 bg-gray-100 hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150' %>
+              </div>
             <% end %>
-            <div class="mt-4 lg:mt-0 lg:ml-6">
-                <% if current_user.try(:admin?) or current_user.try(:district_admin?) %>
-                <%= link_to 'Create new User', new_user_registration_path, class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-indigo-100 text-indigo-800' %>
-                <% end %>
+          </div>
+        <% end %>
+        <div class="mt-4 lg:mt-0 lg:ml-6">
+          <% if current_user.try(:admin?) or current_user.try(:district_admin?) %>
+            <%= link_to 'Create new User', new_user_registration_path, class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-indigo-100 text-indigo-800' %>
+          <% end %>
 
-                <% if user_signed_in? %>
-                <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'ml-2 inline-block rounded-md' %>
-                <% else %>
-                <%= link_to 'Log in', new_user_session_path ,class: 'ml-2 text-md inline-block rounded-md' %>
-                <% end %>
-            </div>
+          <div class="hidden md:block">
+            <% if user_signed_in? %>
+              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'ml-2 inline-block rounded-md' %>
+            <% else %>
+              <%= link_to 'Log in', new_user_session_path, class: 'ml-2 text-md inline-block rounded-md' %>
+            <% end %>
+          </div>
         </div>
-        </div>
-    </header>
+      </div>
+    </div>
+  </header>
 
-    <% if flash.alert %>
+  <% if flash.alert %>
     <div class="bg-red-500 <%= 'hidden' if not flash.alert %>">
-        <div class="container px-2 mx-auto py-2 py-4 text-white text-center"><%= flash[:alert] %></div>
+      <div class="container px-2 mx-auto py-2 py-4 text-white text-center"><%= flash[:alert] %></div>
     </div>
-    <% else %>
+  <% else %>
     <div class="bg-green-500 <%= 'hidden' if not flash.notice %>">
-        <div class="container px-2 mx-auto py-4 text-white text-center "><%= flash.notice %></div>
+      <div class="container px-2 mx-auto py-4 text-white text-center "><%= flash.notice %></div>
     </div>
-    <% end %>
+  <% end %>
 
-    <main class="p-4 lg:p-6 py-10 max-w-7xl mx-auto">
-        <%= yield %>
-    </main>
+  <main class="p-4 lg:p-6 py-10 max-w-5xl mx-auto">
+    <%= yield %>
+  </main>
+  <div class="mx-auto mt-4 block md:hidden py-4">
+    <% if user_signed_in? %>
+      <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'px-4 py-2 block rounded-md bg-white rounded shadow text-center mx-2' %>
+    <% else %>
+      <%= link_to 'Log in', new_user_session_path, class: 'px-4 py-2 block rounded-md bg-white rounded shadow text-center mx-2' %>
+    <% end %>
+  </div>
+<% end %>
 </body>
 
 </html>
